[project]
name = "aub-htp"
version = "1.0.8"
description = "AUB's Heavy-Tails Package - Toolkit for heavy-tailed distributions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scipy-stubs~=1.15.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["aub_htp*"]

[tool.setuptools.package-data]
aub_htp = ["pdf/data/*.npz"]

[project.urls]
Homepage = "https://github.com/AUB-HTP/AUB-HTP"
Repository = "https://github.com/AUB-HTP/AUB-HTP"
Issues = "https://github.com/AUB-HTP/AUB-HTP/issues"
Documentation = "https://github.com/AUB-HTP/AUB-HTP"

[dependency-groups]
dev = [
    "anywidget>=0.9.21",
    "ipython>=8.38.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.7.0",
    "notebook>=7.5.3",
    "plotly>=6.5.2",
    "pytest>=7.0.0",
    "scikit-learn>=1.7.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
